--- a/Proyecto/src/main/resources/application.properties
+++ b/Proyecto/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/obra_social
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=none
+springdoc.api-docs.enabled= true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui/index.html
